[gd_scene load_steps=3 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/settings_panel.gd" id="2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.06, 0.11, 1)

[node name="LogoTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 130.0
grow_horizontal = 2
stretch_mode = 5
expand_mode = 3

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -240.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Spacer1" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="TitleLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 52
theme_override_colors/font_color = Color(0.30, 0.70, 0.90, 1)
text = "MaXtreme"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.45, 0.50, 0.65, 1)
text = "Mechanized Assault & Exploration Reloaded"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="NewGameButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "SINGLE PLAYER"

[node name="HotSeatButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "HOT SEAT"

[node name="HostGameButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "HOST GAME"

[node name="JoinGameButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "JOIN GAME"

[node name="LoadGameButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "LOAD GAME"

[node name="SettingsButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "EXIT"

[node name="VersionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.30, 0.32, 0.40, 1)
text = "MaXtreme v0.5.0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="SettingsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -210.0
offset_right = 260.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="VBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="SettingsPanel/VBox"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckBox" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="VsyncCheck" type="CheckBox" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "VSync"

[node name="EdgeScrollCheck" type="CheckBox" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Camera Edge Scroll"

[node name="MasterVolLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="MusicVolLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
min_value = 0.0
max_value = 100.0
value = 60.0

[node name="SfxVolLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxVolSlider" type="HSlider" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="CloseButton" type="Button" parent="SettingsPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Close"
